fix: aligns hero text to center of grid background (#1590)
* fix: aligns hero text to center of grid background

* narrow width except account pages (still maintains alignemtn of text with grid)

--- a/packages/website/modules/docs-theme/swagger-ui.scss
+++ b/packages/website/modules/docs-theme/swagger-ui.scss
@@ -3076,7 +3076,7 @@
 }
 
 .swagger-ui .mw8 {
-  max-width: 64rem;
+  max-width: 60rem;
 }
 
 .swagger-ui .mw9 {
@@ -3113,7 +3113,7 @@
     max-width: 48rem;
   }
   .swagger-ui .mw8-ns {
-    max-width: 64rem;
+    max-width: 60rem;
   }
   .swagger-ui .mw9-ns {
     max-width: 96rem;
@@ -3149,7 +3149,7 @@
     max-width: 48rem;
   }
   .swagger-ui .mw8-m {
-    max-width: 64rem;
+    max-width: 60rem;
   }
   .swagger-ui .mw9-m {
     max-width: 96rem;
@@ -3185,7 +3185,7 @@
     max-width: 48rem;
   }
   .swagger-ui .mw8-l {
-    max-width: 64rem;
+    max-width: 60rem;
   }
   .swagger-ui .mw9-l {
     max-width: 96rem;
